# llm-benchmark

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: __init__.py
benchmark/brief/: challenge.md  phase1_prompt.md  phase2_prompt.md  phase3_prompt.md
benchmark/fixtures/: _generate.py  expected_queries.json
benchmark/harness/: __init__.py  checks.py  cli.py  config.py  config.yaml  e2e_judge.py  export.py  gitcheck.py  gitsetup.py  judge.py  report.py  rubric.py  run_benchmark.py  score.py  serve.py
benchmark/harness/adapters/: __init__.py  base.py  claude_code.py  codex_cli.py  copilot_cli.py  opencode_cli.py
benchmark/harness/scenarios/: __init__.py  base.py  cep_etl.py  inventory.py  it_assets.py  registry.py
benchmark/inventory/: checks.py
benchmark/inventory/brief/: challenge.md  phase1_prompt.md  phase2_prompt.md  phase3_prompt.md
benchmark/inventory/fixtures/: _generate.py  expected_metrics.json
benchmark/inventory/rubric/: judge_prompt.md  rubric.md
benchmark/inventory/sample_app/: .gitignore  README.md  pyproject.toml
benchmark/inventory/sample_app/inv_etl/: __init__.py  api.py  auth.py  cli.py  db.py  etl.py  inventory.py
benchmark/inventory/sample_app/inv_etl/templates/: index.html
benchmark/inventory/sample_app/tests/: conftest.py  test_inventory.py
benchmark/it_assets/: checks.py
benchmark/it_assets/brief/: challenge.md  phase1_prompt.md  phase2_prompt.md  phase3_prompt.md
benchmark/it_assets/fixtures/: _generate.py  expected.json
benchmark/it_assets/rubric/: judge_prompt.md  rubric.md
benchmark/it_assets/sample_app/: .env  .gitignore  README.md  pyproject.toml
benchmark/it_assets/sample_app/data/: movements.csv
benchmark/it_assets/sample_app/it_assets/: __init__.py  auth.py  cli.py  config.py  db.py  ingest.py  metrics.py  web.py
benchmark/it_assets/sample_app/it_assets/templates/: dashboard.html  login.html
benchmark/it_assets/sample_app/tests/: conftest.py  test_app.py
benchmark/rubric/: judge_prompt.md  objective_checks.md  rubric.md
benchmark/tests/harness/: test_config.py  test_export.py  test_gitcheck.py  test_it_assets.py  test_rubric.py  test_scenarios.py  test_score.py
benchmark/tests/sample_app/: .gitignore  README.md  pyproject.toml
benchmark/tests/sample_app/.github/workflows/: ci.yml
benchmark/tests/sample_app/cep_etl/: __init__.py  cli.py  db.py  etl.py  query.py  web.py
benchmark/tests/sample_app/cep_etl/templates/: index.html
benchmark/tests/sample_app/tests/: conftest.py  test_cep.py
docs/: methodology.md
results/: leaderboard.md
results/claude_code-fable-5/: result.json  scores.json
results/claude_code-haiku-4-5/: result.json  scores.json
results/claude_code-opus-4-7/: result.json  scores.json
results/claude_code-opus-4-8/: result.json  scores.json
results/claude_code-sonnet/: result.json  scores.json
results/codex_cli-codex-5-4/: result.json  scores.json
results/copilot_cli-copilot-opus-4-7/: result.json  scores.json
results/copilot_cli-copilot-sonnet/: result.json  scores.json
results/inventory/: leaderboard.md
results/inventory/claude_code-opus-4-7/: result.json  scores.json
results/inventory/copilot_cli-copilot-opus-4-7/: result.json  scores.json
results/opencode-opus-4-7/: result.json  scores.json
results/opencode-sonnet/: result.json  scores.json
src/cep_etl/: __init__.py  api.py  cli.py  db.py  etl.py  query.py
src/cep_etl/templates/: index.html
tests/: conftest.py  test_api.py  test_cli.py  test_etl.py  test_query.py
