[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cep-etl"
version = "1.0.1"
description = "ETL da base de CEP dos Correios (eDNE Básico)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
cep-etl = "cep_etl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cep_etl"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
