[project]
name = "llm-benchmark"
version = "0.1.0"
description = "Benchmark de LLMs como code agents — Gestão de Movimentação de Ativos de TI em 3 fases (mudança de direção + perturbação), inspirado na metodologia do Akita"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.scripts]
bench = "benchmark.harness.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]

[tool.ruff]
line-length = 100
target-version = "py311"
# O sample_app de referência é "código de candidato": tem o próprio ruff (line-length 100) e é
# lint-checado pelo harness no diretório dele. Não o incluímos no scan do repo.
extend-exclude = ["benchmark/it_assets/sample_app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer usa chamadas (Argument/Option) como defaults — padrão idiomático.
"benchmark/harness/cli.py" = ["B008"]
# Gerador de fixture: tabelas de dados largas são mais legíveis em uma linha.
"benchmark/it_assets/fixtures/_generate.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["benchmark/tests/harness"]
