[project]
name = "it-assets"
version = "0.1.0"
description = "Gestão de movimentação de ativos de TI: FastAPI + SQLite + Jinja2 + JWT + RBAC (sample de referência do harness)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "pyjwt>=2.9",
]

[project.scripts]
it-assets = "it_assets.cli:app"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["it_assets"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=it_assets --cov-report=term-missing"
