[project]
name = "cep-etl"
version = "0.1.0"
description = "ETL da base CEP dos Correios com consulta por CLI, API e Web (sample de referência do harness)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]

[project.scripts]
cep-etl = "cep_etl.cli:app"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cep_etl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
